--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
